# pigeonpost-backend/config/routes.rb
@@ -1,5 +1,7 @@
 Rails.application.routes.draw do
 
+  get "api/auth", to: "application#auth"
+
   namespace :api do
     resources :users, only: [:index, :show, :create, :update]
     resources :drones, only: [:index, :show, :create, :update]
